Add checking AuthToken before processing secured services.